--- a/challenge1.html
+++ b/challenge1.html
@@ -17,6 +17,15 @@
 			text-align: left;
 		}
 
+		.img-button{
+			width: 30px;
+			border-radius: 5px;
+			border: 0px;
+			float: left;
+			margin: 2px;
+
+		}
+
 	</style>
 
 
@@ -50,6 +59,12 @@
 		<li><a href="#">Vietnam</a></li>
 
 	</ul>
+
+<a href="https://www.facebook.com"><img class="img-button" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.disabilitynetworks.info%2Fwp-content%2Fuploads%2F2015%2F10%2FFacebook_logo-8.png&f=1&nofb=1"></a>
+
+<a href="https://www.linkedin.com"><img class="img-button" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.8dmS22svXDHL3LuVJrsSLAHaHa%26pid%3DApi&f=1"></a>
+
+<a href="https://www.twitter.com"><img class="img-button" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn4.iconfinder.com%2Fdata%2Ficons%2Fsocial-messaging-ui-color-shapes-2-free%2F128%2Fsocial-twitter-square1-512.png&f=1&nofb=1"></a>
 
 </body>
 </html>
