--- a/challenge1.html
+++ b/challenge1.html
@@ -39,7 +39,7 @@
 
 	<p>The <strong>2017 Southeast Asian Games</strong>(Malay: <em>Sukan Asia Tenggara 2017)</em>, officially known as the 29th Southeast Asian Games (or simply <strong>29th SEA Games</strong>; Malay: <em>Sukan Asia Tenggara ke-29</em> or <em>Sukan SEA ke-29)</em> and commonly known as <strong>Kuala Lumpur 2017</strong>, was a <strong>outheast Asian</strong> multi-sport event that took place in <strong>Kuala Lumpur, Malaysia</strong>.</p>
 
-	<p>The closing ceremony coincided with the eve of the <strong>Malaysia's</strong> 60th Independence Day celebrations.</p>
+	<p>The closing ceremony coincided with the eve of the <strong><a href="https://en.wikipedia.org/wiki/Independence_Day_(Malaysia)">Malaysia's</strong> 60th Independence Day celebrations.</a></p>
 
 
 	<h2>Participating Countries</h2>
